--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-search-box": "^2.3.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
